tests/negative/gold/static3_test.gold
tests/negative/static3_test.toit:5:8: error: Toplevel functions can't have the 'static' modifier
static foo:
       ^~~
Compilation failed.
